Kontakt personer sat op

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.4.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
